# Boot

./: .gitignore  README.md
boards/xihu/: Kconfig.xihu  board.cmake  board.yml  xihu.dts  xihu.yaml
bootloader/: CMakeLists.txt  prj.conf  update.py
bootloader/src/app/: bitos.h  boot.c  hpatchlite.c  hpatchlite.h  main.c  work_queue.c
bootloader/src/driver/: bl_button.c  bl_button.h  bl_led.c  bl_led.h  bl_uart.c  bl_uart.h
bootloader/src/flash/: flash_area.c  flash_area.h  meta_desc.c  meta_desc.h  norflash.c  norflash.h
